--- a/views/display_case_details.ejs
+++ b/views/display_case_details.ejs
@@ -4,61 +4,98 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="/css/register_profile_style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+            body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url('/images/justice.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: 0;
+    padding: 0;
+}
+
+.details-table {
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 24px;
+    border-collapse: collapse;
+}
+
+.details-table td {
+    padding-right: 10px;
+    padding-bottom: 10px;
+    text-align: left;
+}
+
+button[type="submit"] {
+    margin-top: 10px;
+}
+
+.footer {
+    background-color: rgba(252, 250, 250, 0.7);
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.footer .text-center {
+    width: 90%;
+    margin: 0 auto;
+}
+
+
+        </style>
     </head>
 
     <body>
-        <center><h2><i class="fa fa-user-plus" style="font-size:32px"> <%= case_name %>'s Details</i></h2></center>
-
+        <center><h2><i class="fa fa-user-plus" style="font-size:32px;color: white;font-weight: bold;"> <%= case_name %>'s Details</i></h2></center>
+        <tr>
+            <td colspan="2" style="text-align: center;"><a href="/client/Dashboard" class="button"><i class="fa fa-home"></i> Home</a></td>
+          </tr>
         
 
-        <form action="/client/dashboard" method="GET">
-            <div class="container">
-                <label><b>Case Name: </b></label>
-                <br>
-                <label><%= case_name %></label>
-                <br>
+          <form action="/client/dashboard" method="GET">
+            <table class="details-table" style="width: 100%; border-collapse: collapse;">
 
-                <label><b>Case Type: </b></label>
-                <br>
-                <label><%= case_type %></label>
-                <br>
-
-                <label><b>Case Description: </b></label>
-                <br>
-                <label><%= case_descp %></label>
-                <br>
-
-                <label><b>Court Case No.: </b></label>
-                <br>
-                <label><%= court_case_no %></label>
-                <br>
-
-                <label><b>Court Type: </b></label>
-                <br>
-                <label><%= court_type %></label>
-                <br>
-
-                <label><b>Hearing Date: </b></label>
-                <br>
-                <label><%= h_date %></label>
-                <br>
-
-                <!-- <button type="submit" class="button">Back</button> -->
-            </div>
+                <tr>
+                    <td style="padding-right: 10px; padding-bottom: 10px; text-align: left;"><b>Case Name:</b></td>
+                    <td style="padding-bottom: 10px; text-align: left;"><%= case_name %></td>
+                </tr>
+                <tr>
+                    <td style="padding-right: 10px; padding-bottom: 10px; text-align: left;"><b>Case Type:</b></td>
+                    <td style="padding-bottom: 10px; text-align: left;"><%= case_type %></td>
+                </tr>
+                <tr>
+                    <td style="padding-right: 10px; padding-bottom: 10px; text-align: left;"><b>Case Description:</b></td>
+                    <td style="padding-bottom: 10px; text-align: left;"><%= case_descp %></td>
+                </tr>
+                <tr>
+                    <td style="padding-right: 10px; padding-bottom: 10px; text-align: left;"><b>Court Case No.:</b></td>
+                    <td style="padding-bottom: 10px; text-align: left;"><%= court_case_no %></td>
+                </tr>
+                <tr>
+                    <td style="padding-right: 10px; padding-bottom: 10px; text-align: left;"><b>Court Type:</b></td>
+                    <td style="padding-bottom: 10px; text-align: left;"><%= court_type %></td>
+                </tr>
+                <tr>
+                    <td style="padding-right: 10px; padding-bottom: 10px; text-align: left;"><b>Hearing Date:</b></td>
+                    <td style="padding-bottom: 10px; text-align: left;"><%= h_date %></td>
+                </tr>
+               
+            </table>
         </form>
+        
 
-        <% if(user_type === "c")
-        { %>
-            <form action="/lawyer/display_lawyer_profile/<%= lawyer_id %>" method="GET" id="lawyer-details-form"></form>
-
-            <script src="/js/show_lawyer_details_btn.js"></script>
-        <% }
-
-        else if(user_type === "l")
-        { %>
-            <form action="/chat/get_chat/<%= _id %>" method="GET" id="case-details-form"></form>
-
-            <script src="/js/show_chat_btn.js"></script>
-        <% } %>
+        <footer class="footer">
+            <div class="text-center p-3">
+              © 2024 Copyright:
+              <a class="text-body" href="https://github.com/ANI-IN"><u>ANI-IN</u></a>
+            </div>
+          </footer>
     </body>
 </html>
